# skull

./: README.md  card-hand-1.xcf  card-hand-2.xcf  card-hand-3.xcf  card-hand-4.xcf  card-stack-1.xcf  card-stack-2.xcf  card-stack-3.xcf  card-stack-4.xcf
skull-client/: .gitignore  README.md  bower.json  package.json
skull-client/src/: Basil.js  Basil.purs  BotKey.purs  BotKeyList.purs  BotKeys.purs  EditField.purs  ErrorMessage.purs  Game.purs  Home.purs  LoggedIn.purs  LoggedOut.purs  Main.purs  Menubar.purs  Navigation.purs  PlayNow.purs  PlayNowGame.purs  Public.purs  Root.purs  Router.purs  Types.purs  Ulff.purs
skull-client/src-public/: entry.js  index.html
skull-client/src-public/css/: colors.css  controls.css  main.css  playnow.css  table.css
skull-client/src/Auth/: LoginForm.purs  Signup.purs  SignupForm.purs  Types.purs  UserField.purs  UserNameField.purs
skull-client/src/Auth/LoginForm/: Render.purs  Types.purs
skull-client/src/Auth/Signup/: Render.purs  Types.purs
skull-client/src/Auth/SignupForm/: Render.purs  Types.purs
skull-client/src/Auth/UserField/: Render.purs  Types.purs
skull-client/src/Auth/UserNameField/: Render.purs  Types.purs
skull-client/src/BotKey/: Render.purs  Types.purs
skull-client/src/BotKeyList/: Render.purs  Types.purs
skull-client/src/BotKeys/: Render.purs  Types.purs
skull-client/src/Common/: DoNothingForm.purs
skull-client/src/EditField/: Render.purs  Types.purs
skull-client/src/ErrorMessage/: Render.purs  Types.purs
skull-client/src/Game/: Types.purs
skull-client/src/Halogen/HTML/: Extended.purs
skull-client/src/Home/: Render.purs  Types.purs
skull-client/src/LoggedIn/: Render.purs  Types.purs
skull-client/src/LoggedOut/: Render.purs  Types.purs
skull-client/src/Menubar/: Render.purs  Types.purs
skull-client/src/Navigation/: Render.purs  Types.purs
skull-client/src/PlayNow/: Render.purs  Types.purs
skull-client/src/PlayNowGame/: Render.purs  Types.purs
skull-client/src/Public/: Render.purs  Types.purs
skull-client/src/Root/: Render.purs  Types.purs
skull-client/src/Util/: HTML.purs
skull-client/webpack/: config.js  run.js
skull-server/: .gitignore  README.md  default.nix  shell.nix  skull-server.cabal  stack.yaml
skull-server/app/: Main.hs  Options.hs
skull-server/assets/: index.html
skull-server/psclient-generator/: Main.hs
skull-server/src/: Api.hs  Auth.hs  Game.hs  Handler.hs  Logger.hs  Types.hs
skull-server/src/Api/: Types.hs
skull-server/src/Auth/: Api.hs  Handler.hs  Model.hs  Types.hs
skull-server/src/Auth/Api/: Types.hs
skull-server/src/BotKey/: Api.hs  Handler.hs  Model.hs  Types.hs
skull-server/src/BotKey/Api/: Types.hs
skull-server/src/Control/Monad/Trans/Maybe/: Extended.hs
skull-server/src/Data/ByteString/Base64/URL/: Extended.hs
skull-server/src/Data/Functor/: Extended.hs
skull-server/src/Database/: Adaptor.hs  Class.hs  Common.hs  Query.hs  Schema.hs
skull-server/src/Database/Postgres/: Class.hs
skull-server/src/Database/Schema/: Types.hs
skull-server/src/Game/: Agent.hs  Api.hs  Bot.hs  Handler.hs  Moves.hs  Play.hs  Types.hs
skull-server/src/Game/Api/: Types.hs
skull-server/src/Game/Play/: Api.hs  Handler.hs  Types.hs
skull-server/src/Game/Play/Api/: Types.hs
skull-server/src/Handler/: Types.hs
skull-server/src/HttpApp/: Api.hs  Handler.hs  Model.hs
skull-server/src/HttpApp/BotKey/: Api.hs  Handler.hs  Types.hs
skull-server/src/HttpApp/BotKey/Api/: Types.hs
skull-server/src/HttpApp/PlayNow/: 0  Api.hs  Handler.hs
skull-server/src/HttpApp/PlayNow/Api/: Types.hs
skull-server/src/HttpApp/User/: Api.hs  Handler.hs  Types.hs
skull-server/src/HttpApp/User/Api/: Types.hs
skull-server/src/Util/: Base64.hs
