name:                skull-server
version:             0.1.0.0
synopsis:            game server for the simple game skull
description:         Please see README.md
homepage:            https://github.com/rubenmoor/skull
license:             MIT
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Auth
                     , Auth.Api
                     , Auth.Api.Types
                     , Auth.Handler
                     , Auth.Types
                     , Auth.Model
                     , BotKey.Api
                     , BotKey.Api.Types
                     , BotKey.Handler
                     , BotKey.Types
                     , BotKey.Model
                     , Game.Api
                     , Game.Api.Types
                     , Game.Handler
                     , Game.Types
                     , Database.Adaptor
                     , Database.Class
                     , Database.Schema
                     , Database.Schema.Types
                     , Database.Query
                     , Database.Common
                     , Handler
                     , Types
                     , Util.Base64
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , diener
                     , email-validate
                     , entropy
                     , http-types
                     , lens
                     , lifted-base
                     , monad-control
                     , mtl
                     , opaleye
                     , parsec
                     , postgresql-simple
                     , product-profunctors
                     , pwstore-fast
                     , servant
                     , servant-server
                     , text
                     , text-show
                     , time
                     , transformers
                     , transformers-base
                     , wai
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , RecordWildCards
  ghc-options:         -Wall

executable skull-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , data-default
                     , diener
                     , mtl
                     , optparse-applicative
                     , postgresql-simple
                     , servant-server
                     , skull-server
                     , text
                     , text-show
                     , warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rubenmoor/herculus-subscribers
