name:                skull-server
version:             0.1.0.0
synopsis:            game server for the simple game skull
description:         Please see README.md
homepage:            https://github.com/rubenmoor/skull
license:             MIT
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Api.Types
                     , Auth
                     , Auth.Types
                     , Data.ByteString.Base64.URL.Extended
                     , Data.Functor.Extended
                     , Database.Class
                     , Database.Query
                     , Game
                     , Game.Agent
                     , Game.Moves
                     , Game.Api
                     , Game.Api.Types
                     , Game.Bot
                     , Game.Handler
                     , Game.Play.Api
                     , Game.Play.Api.Types
                     , Game.Play.Handler
                     , Game.Types
                     , Handler.Types
                     , HttpApp.Api
                     , HttpApp.Handler
                     , HttpApp.BotKey.Api
                     , HttpApp.BotKey.Api.Types
                     , HttpApp.BotKey.Handler
                     , HttpApp.BotKey.Types
                     , HttpApp.Model
                     , HttpApp.User.Api
                     , HttpApp.User.Api.Types
                     , HttpApp.User.Handler
                     , HttpApp.User.Types
                     , HttpApp.PlayNow.Api
                     , HttpApp.PlayNow.Api.Types
                     , HttpApp.PlayNow.Handler
                     , Logger
  build-depends:       aeson
                     , ansi-terminal
                     , base
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , containers
                     , data-default
                     , data-ordlist
                     , email-validate
                     , entropy
                     , esqueleto
                     , fast-logger
                     , http-api-data
                     , http-types
                     , lens
                     , lifted-base
                     , monad-control
                     , monad-logger
                     , mtl
                     , MonadRandom
                     , parsec
                     , persistent
                     , persistent-template
                     , product-profunctors
                     , pwstore-fast
                     , random
                     , servant
                     , servant-docs
                     , servant-server
                     , servant-purescript
                     , text
                     , text-show
                     , time
                     , transformers
                     , transformers-base
                     , wai
  default-language:    Haskell2010
  ghc-options:         -Wall

executable skull-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , data-default
                     , directory
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , persistent-sqlite
                     , servant-server
                     , skull-server
                     , text
                     , text-show
                     , warp
  default-language:    Haskell2010

executable psclient-generator
  main-is:             Main.hs
  hs-source-dirs:      psclient-generator
  default-language:    Haskell2010
  build-depends:       skull-server
                     , base
                     , aeson
                     , containers
                     , directory
                     , http-api-data
                     , http-types
                     , lens
                     , purescript-bridge
                     , servant
                     , servant-server
                     , servant-purescript
                     , servant-subscriber
                     , temporary
                     , text

-- executable api-doc-generator
--   main-is:             Main.hs
--   hs-source-dirs:      api-doc-generator
--   default-language:    Haskell2010
--   build-depends:       base
--                      , servant-docs
--                      , skull-server
--                      , text

source-repository head
  type:     git
  location: https://github.com/rubenmoor/herculus-subscribers
